Fix logo overflow

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -128,7 +128,6 @@ pre
 
 .navbar .home-link
   width 4.3rem
-  height 40px
   overflow hidden
 
 @media (min-width: 560px)
